--- a/new_employee.html
+++ b/new_employee.html
@@ -489,7 +489,10 @@
         Если вас заинтересовало наше предложение и вы хотите попробовать свои силы в нашей компании, то заполните данную гугл-форму, мы свяжемся с вами.
     </div>
 
-    <!--Вставить ссылку на гугл-форму-->
+    
+    <div class="google_form_wrapper">
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyPG2paVrt4eaMcom5jSKtADdgfNy3H2NzyO8p8hbCcU-E-Q/viewform?usp=sf_link" class="google_form_wrapper"></iframe>
+    </div>
 
 
     
