--- a/index.html
+++ b/index.html
@@ -406,6 +406,19 @@
       </div>
     </div>
 
+    <div class="line"></div>
+
+    <!--Разделы с примерами на одной странице с переключателями-->
+
+    <div class="wrapper_categories">
+      <div class="wrapper_buttons_for_category">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+      </div>
+    </div>
+
 
 </body>
 </html>
