add link between pages

--- a/example.html
+++ b/example.html
@@ -331,9 +331,12 @@
                       />000000000000000
               </symbol>
           </svg>
-                <svg class="logotype">
-                    <use xlink:href="#logo"></use>
-                </svg>
+          <a href="index.html">
+            <svg class="logotype">
+              <use xlink:href="#logo"></use>
+          </svg>
+          </a>
+                
 
                 
 
