--- a/freza_chpu.html
+++ b/freza_chpu.html
@@ -354,7 +354,18 @@
     <div class="line"></div>
 
     <div class="name_way">Фрезеровка и грпвировка на ЧПУ станке</div>
-    <div class="description_of_way">Описание раздела. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam vel dolor nulla atque soluta dolorum aliquam qui iure hic odit omnis odio dignissimos, reiciendis molestias earum consequuntur error aliquid expedita. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae quae provident sint voluptatum, molestiae eligendi dolor modi accusamus quasi tenetur asperiores corrupti cum expedita distinctio iusto ad, perspiciatis beatae ullam. Ниже вы увидете пример наших работ.</div>
+    <div class="description_of_way">
+      <p>Фрезерная резка на ЧПУ</p>
+<p>Наша компания предоставляет услуги высокоточной фрезерной резки на ЧПУ для клиентов, ценящих качество и эффективность. Мы обладаем богатым опытом в области фрезерной резки на ЧПУ и гарантируем высший стандарт качества в каждом проекте.</p>
+
+<p>Фрезерная резка на ЧПУ – это современный метод обработки материалов, который позволяет достичь выдающейся точности и повторяемости.</p>
+
+<p>Станок с ЧПУ идеально справится с обработкой деталей из дерева, оргстекла, пластика, HPL пластика, и т.п.</p>
+
+<p>Мы используем передовое оборудование с ЧПУ, постоянно обновляя и улучшая наши технологические возможности.</p>
+
+<p>Габариты стола: 1600х3000 мм</p>
+    </div>
     <div class="line"></div>
 
     <div class="wrapper-pic-ways">
