--- a/index.html
+++ b/index.html
@@ -369,14 +369,14 @@
 
       <a href="peregorodki.html" target="_blank">
         <div class="group-way">
-          <div class="pic-way" style="background-image: url(pic/arki.-foto-15.jpg);"></div>
+          <div class="pic-way" style="background-image: url(pic/per_2.jpg);"></div>
           <div class="text-way">Перегородки</div>
         </div>
       </a>
       
       <a href="make_decoration.html" target="_blank">
         <div class="group-way">
-          <div class="pic-way" style="background-image: url(pic/dec_1.jpg);"></div>
+          <div class="pic-way" style="background-image: url(pic/dec_2.jpeg);"></div>
           <div class="text-way">Изготовление декораций</div>
         </div>
       </a>
@@ -384,7 +384,7 @@
 
       <a href="stands.html" target="_blank">
         <div class="group-way">
-          <div class="pic-way" style="background-image: url(pic/penza-1.jpg);"></div>
+          <div class="pic-way" style="background-image: url(pic/stand_1.jpeg);"></div>
           <div class="text-way">Cтенды для выставок</div>
         </div>
       </a>
